# Mioucat-Workshop-Paper2Skill

./: LICENSE  README.md  pyproject.toml  requirements.txt
.trae/skills/mioucat_workshop-paper_2_skill/: 0001_01_environment_setup.md  0001_02_pdf_conversion.md  0001_03_01_basic_processing.md  0001_03_02_01_springer_nature.md  0001_03_02_publisher_guidelines.md  0001_03_03_01_nature_computational_science.md  0001_03_03_journal_guidelines.md  0001_03_llm_processing.md  0001_04_skill_extraction.md  0001_05_github_processing.md  0001_06_web_article_processing.md  0001_07_html_processing.md  0001_usage_guide.md  0002_01_logical_structure.md  0002_02_document_length.md  0002_skill_creation_guide.md  SKILL.md
llm_processed/Springer_Nature/Nature_Computational_Science/s43588-025-00945-z/: s43588-025-00945-z.md
llm_processed/Springer_Nature/Nature_Computational_Science/s43588-025-00945-z/chapters/: abstract.md  discussion.md  introduction.md  methods.md  references.md  results.md
scripts/: analyze_pdf_images.py  check_gpu_pytorch.py  process_pdf.py
