[project]
name = "paper2skill"
version = "0.1.0"
description = "科研文献和专利处理工具，将 PDF 转换为结构化 Markdown 并提取相关 skill 信息"
readme = "README.md"
authors = [
    { name = "MiouCat Workshop", email = "snowaker@zhuyintech.cn" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
requires-python = ">=3.10.11"
dependencies = [
    "marker-pdf==1.10.2",
    "PyMuPDF==1.27.1",
    "transformers",
    "torch",
    "tqdm",
    "python-dotenv",
    "pydantic",
    "pydantic-settings"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
